# Buddi-Experimental

./: CMakeLists.txt
Buddi/: CMakeLists.txt
Buddi/includes/Framework/: Application.h
Buddi/src/: main.cpp
Buddi/src/Framework/: Application.cpp
Buddi_Engine/: CMakeLists.txt
Buddi_Engine/includes/: EntryPoint.h
Buddi_Engine/includes/Framework/: Actor.h  Application.h  Core.h  Object.h  Scene.h
Buddi_Engine/src/: EntryPoint.cpp
Buddi_Engine/src/Framework/: Actor.cpp  Application.cpp  Object.cpp  Scene.cpp
Buddi_Test_Game/: CMakeLists.txt
Buddi_Test_Game/includes/GameFramework/: GameApplication.h
Buddi_Test_Game/src/GameFramework/: GameApplication.cpp
src/: main.cpp
